<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trio.moneymanager.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_user_name" />

        <EditText
            android:id="@+id/prof_txt_user_name"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <RadioButton
            android:id="@+id/prof_radio_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_salary_monthly" />

        <RadioButton
            android:id="@+id/prof_radio_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/prof_salary_monthly" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_avg_salary" />

        <EditText
            android:id="@+id/prof_txt_avg_income"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_save_amt" />

        <EditText
            android:id="@+id/prof_txt_amt_to_save"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <EditText
            android:id="@+id/prof_txt_talk_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/prof_txt_talk"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/prof_txt_talk_time"
            android:layout_toRightOf="@id/prof_txt_talk_time"
            android:text="@string/prof_mobile_talk_time" />

        <TextView
            android:id="@+id/prof_txt_inter"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/prof_mobile_internet" />

        <EditText
            android:id="@+id/prof_txt_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/prof_txt_inter"
            android:layout_toStartOf="@id/prof_txt_inter"
            android:inputType="number"
            android:maxLength="2" />

        <EditText
            android:id="@+id/prof_txt_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/prof_txt_talk"
            android:layout_toRightOf="@id/prof_txt_talk"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/prof_txt_sms"
            android:layout_toRightOf="@id/prof_txt_sms"
            android:text="@string/prof_mobile_sms" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_cloth_cost" />

        <EditText
            android:id="@+id/prof_txt_cloth_cost"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_house_rent" />

        <EditText
            android:id="@+id/prof_txt_house_rent"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/prof_relative_height" >

        <TextView
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/prof_trans_fee" />

        <EditText
            android:id="@+id/prof_txt_trans_fee"
            android:layout_width="@dimen/prof_txt_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:inputType="number" />
    </RelativeLayout>

</LinearLayout>