<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <com.trio.moneymanager.custom.CustomButton
            android:id="@+id/frag_indi_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:text="@string/frag_indi_but_day"
            android:visibility="gone" />

        <Button
            android:id="@+id/frag_indi_but_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_default"
            android:gravity="center" />

        <com.trio.moneymanager.custom.CustomButton
            android:id="@+id/max_can_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:text="2000က်ပ္"
            android:textColor="#0000ff"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/income"
        android:layout_width="@dimen/frag_individual_but_size"
        android:layout_height="@dimen/frag_individual_but_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/fab1"
        android:src="@android:drawable/ic_input_add"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/outcome"
        android:layout_width="@dimen/frag_individual_but_size"
        android:layout_height="@dimen/frag_individual_but_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/fab1"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible" />

    <com.trio.moneymanager.custom.CustomTextView
        android:id="@+id/txt_should_use"
        android:layout_width="@dimen/frag_individual_txt_width"
        android:layout_height="@dimen/frag_individual_txt_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#0000ff"
        android:textSize="20dp" />

    <com.trio.moneymanager.custom.CustomTextView
        android:id="@+id/txt_actual_use"
        android:layout_width="@dimen/frag_individual_txt_width"
        android:layout_height="@dimen/frag_individual_txt_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textSize="20dp" />

    <com.trio.moneymanager.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_should_use"
        android:layout_alignEnd="@id/txt_should_use"
        android:layout_alignLeft="@id/txt_should_use"
        android:layout_alignRight="@id/txt_should_use"
        android:layout_alignStart="@id/txt_should_use"
        android:text="@string/frag_indi_txt_should_use"
        android:textColor="@android:color/secondary_text_dark"
        android:gravity="center_horizontal" />

    <com.trio.moneymanager.custom.CustomTextView
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_actual_use"
        android:layout_alignEnd="@id/txt_actual_use"
        android:layout_alignLeft="@id/txt_actual_use"
        android:layout_alignRight="@id/txt_actual_use"
        android:layout_alignStart="@id/txt_actual_use"
        android:text="@string/frag_indi_txt_actual_use"
        android:textColor="@android:color/secondary_text_dark" />

    <ImageButton
        android:id="@+id/net_result"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignBottom="@id/income"
        android:layout_centerHorizontal="true"
      android:layout_marginBottom="10dp"
       	
        android:background="@drawable/fab1"
        android:src="@drawable/plus"
        android:padding="21dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/income"
        android:layout_below="@id/top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="vertical" >

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/frag_indi_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                />d

            <com.trio.moneymanager.custom.CustomTextView
                android:id="@+id/frag_indi_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>